feat:user reviews to anime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-mal.topanime = https://myanimelist.net/topanime.php?limit=
+mal.topanime.url = https://myanimelist.net/topanime.php?limit=
+mal.reviews.url = https://myanimelist.net/reviews.php?t=anime&filter_check=&filter_hide=&preliminary=on&spoiler=off&p=
